# nixos-config

./: .gitignore  CLAUDE.md  README.md  flake.nix  pending_for_human.md
docs/: REVIEW.md
dotfiles/: p10k.zsh
home/: _test-base.nix  _test-claude-pane.nix  _test-desktop.nix  _test-kitty.nix  autodoro.nix  calibre-plugins.nix  cinnamon-dconf.nix  cinnamon.nix  claude-services.nix  claude-skills.nix  claude-symlinks.nix  desktop-apps.nix  drift-analyzer.nix  futuresearch-gate-mcp.nix  ghostty.nix  jonathan-linux.nix  jonathan.nix  kitty.nix  research-agent-mcp.nix  router-services.nix  sota-watch.nix  worktree-sweep-script.nix  worktree-sweep.nix  xfce.nix
modules/: common.nix
modules/nixos/claude-rebuild/src/: pyproject.toml
modules/nixos/claude-rebuild/src/claude_rebuild/: apply.py  classifier.py  common.py  mcp_server.py
overlays/: auphonic-cli.nix  beeper.nix  kitty-libinput-momentum.patch  kitty.nix
profiles/: base.nix  keyring.nix
proposals/: 2026-04-14-mint-drift.md  2026-04-17-mint-drift-cron-jobs-not-captured.md  2026-04-17-mint-drift-git-ignore-untracked.md  2026-04-17-mint-drift-huskyrc-untracked.md  2026-04-17-mint-drift-obs-studio-missing.md  2026-04-17-mint-drift-xbindkeys-autostart-missing.md  2026-04-19-mint-drift-cinnamon-wm-preferences-incomplete.md  2026-04-19-mint-drift-cursor-ide-missing.md  2026-04-19-mint-drift-docker-missing.md  2026-04-19-mint-drift-flatpak-not-enabled.md  2026-04-19-mint-drift-gh-cli-missing.md  2026-04-19-mint-drift-git-global-ignore-untracked.md  2026-04-19-mint-drift-gnome-font-rendering.md  (+31 more)
scripts/: install.sh  (+17 more)
(+171 files in other folders)
